# BAIM

./: .gitignore  README.md  pyproject.toml  smoke_train_baim.py
NIPS34/metadata/: question_en.json
configs/: baim_config.yaml
src/: extract.py  process.py
src/configs/: extract.yaml  process.yaml
src/entities/: __init__.py  embedding.py  question.py  reasoning_embedding_storage.py  solution.py  storage.py  trajectory_storage.py
src/extractor/: __init__.py  trajectory.py
src/prompts/: reasoning_template.yaml
src/pykt-toolkit/configs/: data_config.json  kt_config.json
src/pykt-toolkit/data/nips_task34/: keyid2idx.json
src/pykt-toolkit/pykt/config/: config.py
src/pykt-toolkit/pykt/datasets/: init_dataset.py
src/pykt-toolkit/pykt/models/: __init__.py  akt_baim.py  init_model.py  polya_akt_v5.py  polya_qdkt_v5.py  polya_qikt_v5.py  polya_simplekt_v5.py  polya_sparsekt_v5.py  qdkt_baim.py  qikt_baim.py  que_base_model.py  simplekt_baim.py  sparsekt_baim.py  train_model.py  utils.py
src/pykt-toolkit/pykt/utils/: wandb_utils.py
src/pykt-toolkit/train_test/: akt_baim_train.py  polya_akt_v5_train.py  polya_qdkt_v5_train.py  polya_qikt_v5_train.py  polya_simplekt_v5_train.py  polya_sparsekt_v5_train.py  qdkt_baim_train.py  qikt_baim_train.py  run_akt_baim.sh  run_qdkt_baim.sh  run_qikt_baim.sh  run_simplekt_baim.sh  run_sparsekt_baim.sh  simplekt_baim_train.py  smoke_train_baim.py  sparsekt_baim_train.py  wandb_eval.py  wandb_predict.py  wandb_train.py
src/pykt-toolkit/wandb/latest-run/: run-k5qc4dxf.wandb
src/utils/: config_loader.py  message_router.py  prompt_builder.py  question_loader.py
(+5 files in other folders)
