[project]
name = "behavior-aware-item-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "openai>=1.104,<2",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "pykt-toolkit",
    "matplotlib>=3.10.6",
    "tensorboard>=2.20.0",
    "dataset>=1.6.2",
    "datasets",
    "python-dotenv>=0.9.9",
    "pillow>=10.4.0",
    "plotly>=6.3.1",
    "einops>=0.8.1",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.9.post2",
    "pandas>=2.3.2",
    "hf-transfer>=0.1.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "torchviz>=0.0.3",
    "graphviz>=0.21",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
]

[tool.uv]
index-strategy = "unsafe-best-match"
prerelease = "allow"
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-url = "https://pypi.org/simple"
