[project]
name = "behavior-aware-item-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "pykt-toolkit",
    "tensorboard>=2.20.0",
    "python-dotenv>=0.9.9",
    "pillow>=10.4.0",
    "scikit-learn>=1.7.2",
    "hf-transfer>=0.1.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "torchviz>=0.0.3",
]

[tool.uv]
index-strategy = "unsafe-best-match"
prerelease = "allow"
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-url = "https://pypi.org/simple"
